# drfraudsworth-jupiter-adapter

./: Cargo.toml  LICENSE  README.md  TESTING.md
.github/workflows/: ci.yml
examples/: quote_example.rs
idl/: conversion_vault.json  tax_program.json
src/: constants.rs  lib.rs  sol_pool_amm.rs  vault_amm.rs
src/accounts/: addresses.rs  hook_accounts.rs  sol_pool_accounts.rs  vault_accounts.rs
src/math/: amm_math.rs  tax_math.rs  vault_math.rs
src/state/: epoch_state.rs  mod.rs  pool_state.rs  token_account.rs
tests/: test_construction.rs  test_mainnet_validation.rs
