[package]
name = "drfraudsworth-jupiter-adapter"
version = "0.1.4"
edition = "2021"
description = "Jupiter AMM adapter SDK for the Dr. Fraudsworth DEX protocol"
license = "MIT"
repository = "https://github.com/MetalLegBob/drfraudsworth-jupiter-adapter"
keywords = ["jupiter", "solana", "dex", "amm"]

[dependencies]
jupiter-amm-interface = "0.6"
solana-sdk = "~2.3"
rust_decimal = "1.36.0"
ahash = "0.8"
anyhow = "1"
sha2 = "0.10"

# NOTE: math-parity tests against the on-chain programs (zero-tolerance
# SDK-math == on-chain-math proofs) live in the protocol monorepo
# (sdk/jupiter-adapter/tests/parity_*.rs there), because they dev-depend
# on the program crates. This repo carries the standalone suite:
# construction, edge gauntlet, instruction structure, mainnet-data
# validation, and extended quoting.
